[package]
name = "tgxplorer"
version = "0.1.0"
edition = "2021"
description = "Telegram Exported Chat Explorer — browse message chains from Telegram JSON exports"
license = "MIT"
repository = "https://github.com/user/tgxplorer"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
rfd = "0.15"
dirs = "6"

[profile.release]
opt-level = 2
lto = "thin"
